--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Build VitePress site
         run: npm run docs:build
+      
+      - name: Add CNAME file
+        run: echo 'pages.ceciliastudio.top' > CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
