--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run docs:build
       
       - name: Add CNAME file
-        run: echo 'pages.ceciliastudio.top' > CNAME
+        run: echo 'pages.ceciliastudio.top' > .vitepress/dist/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
