--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.25.0",
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "vitepress": "2.0.0-alpha.15",
     "vue": "^3.5.26"
   }
