--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Fetch PCL.Mac.Homepage XSD
+        run: node scripts/fetch-pmh-xsd.mts
 
       - name: Build VitePress site
         run: npm run docs:build
